# etools

./: .gitignore  ASSETS.md  CLAUDE.md  CONTRIBUTING.md  LEGAL-RISK-ASSESSMENT.md  MACOS_INSTALL.md  NOTICES.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  rust-analyzer.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS
.github/ISSUES/: plugin-window-disappear.md
.github/workflows/: build-macos.yml
docs/: INDEX.md  NPM_PLUGIN_DEV_GUIDE.md  NPM_PLUGIN_DEV_GUIDE_OLD.md  PLUGIN_UI_GUIDE.md  abbreviation-guide.md  architecture-audit-final.md  architecture-audit-round2.md  architecture-audit-round3.md  architecture-audit-round4.md  architecture-audit-round5.md  architecture-audit-round7.md  architecture-audit-round8.md  architecture-audit-round9.md  architecture-compliance-final.md  architecture-compliance-report.md  logging-system.md  plugin-management.md
example-plugins/ui-consistency-demo/: README.md  index.ts  package.json  ui.css  ui.tsx
scripts/: monitor-rust-analyzer.sh
specs/001-plugin-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmds/: app.rs  files.rs  marketplace.rs  plugins.rs  settings.rs
src-tauri/src/db/: plugin_schema.rs
src-tauri/src/models/: mod.rs  plugin.rs  plugin_metadata.rs
src-tauri/src/services/: app_monitor.rs  logger.rs  marketplace_service.rs  mod.rs  plugin_service.rs  screen_detector.rs
src/hooks/: useSearch.ts
(+105 files in other folders)
