[package]
name = "etools"
version = "0.1.0"
description = "每个人的工具 - 生产力启动器"
authors = ["xuqi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "etools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
notify = "6"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
arboard = "3.4"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
tokio = { version = "1.35", features = ["sync", "rt-multi-thread", "macros"] }
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
urlencoding = "2.1"
image = "0.25"
objc = "0.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.25"

